# AI-vision

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md  WORK_LOG.md  pyproject.toml
app/: config.py  event_rules.py  event_store.py  main.py  models.py  roboflow_client.py  stream_processor.py
app/static/: app.js  index.html  styles.css
realtime/: README.md  requirements.txt  rtsp_optical_flow.py
tests/: test_event_rules.py  test_roboflow_client.py
