[project]
name = "ai-vision-gesture-events"
version = "0.1.0"
description = "Real-time stream gesture detection dashboard using Roboflow Hosted API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
  "opencv-python>=4.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
